# SeqLib

./: .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  Doxyfile  LICENSE  Makefile.am  Makefile.in  README.md  config.h.in  config.status  configure  configure.ac  source.dot  test_build.sh
.travis.scripts/: clang.sh  coveralls.sh  publish-doxygen.sh  travis-before-install.sh  travis-install.sh
SGA/Algorithm/: Makefile.am  Makefile.in
SGA/Bigraph/: Bigraph.h  Makefile.am  Makefile.in
SGA/SGA/: Makefile.am  Makefile.in
SGA/SQG/: Makefile.am  Makefile.in
SGA/StringGraph/: Makefile.am  Makefile.in
SGA/SuffixTools/: Makefile.am  Makefile.in
SGA/Util/: Makefile.am  Makefile.in
SeqLib/: BFC.h  BLATWrapper.h  BWAAligner.h  BWAIndex.h  BWAWrapper.h  BamHeader.h  BamReader.h  BamRecord.h  BamWalker.h  BamWriter.h  FastqReader.h  FermiAssembler.h  GenomicRegion.h  GenomicRegionCollection.cpp  GenomicRegionCollection.h  IntervalTree.h  ReadFilter.h  RefGenome.h  SeqLibCommon.h  SeqLibUtils.h  SeqPlot.h  ThreadPool.h  UnalignedSequence.h
benchmark/: Makefile  benchmark.cpp
blat/: README  makefile
blat/blat/: blat  blat.c  makefile  output.psl
blat/blat/CVS/: Entries  Repository
blat/blat/test/CVS/: Entries  Repository
blat/blat/test/badSplice/CVS/: Entries  Repository
blat/blat/test/intron50k/CVS/: Entries  Repository
blat/blat/test/missBlastOut/CVS/: Entries  Repository
blat/blat/test/noHit19/CVS/: Entries  Repository
blat/blat/test/small/CVS/: Entries  Repository
blat/blat/test/throwback/CVS/: Entries  Repository
blat/blat/test/urchProt/CVS/: Entries  Repository
blat/blat/test/v29skips/CVS/: Entries  (+1 more)
blat/gfClient/CVS/: Entries  Repository
blat/gfServer/CVS/: Entries  Repository
blat/gfServer/tests/CVS/: Entries  Repository
blat/hg/pslPretty/CVS/: Entries  Repository
blat/hg/pslReps/CVS/: Entries  Repository
blat/hg/pslSort/CVS/: Entries  Repository
blat/inc/: common.h  common.mk  foo
blat/jkOwnLib/: ffAliHelp.c  ffSeedExtend.c  genoFind.c  gfBlatLib.c  gfOut.c  supStitch.c
blat/lib/: axt.c  blastOut.c  chainBlock.c  cheapcgi.c  common.c  diffs  ffScore.c  foo  hash.c  makefile  portimpl.c  psl.c  rangeTree.c  status  udc.c
blat/utils/faToNib/CVS/: Entries  Repository
blat/utils/faToTwoBit/CVS/: Entries  Repository
blat/utils/nibFrag/CVS/: Entries  Repository
blat/utils/twoBitInfo/CVS/: Entries  Repository
blat/utils/twoBitToFa/CVS/: Entries  Repository
blat/webBlat/: webBlat
blat/webBlat/CVS/: Entries  Repository
bwa/: Makefile  bwamem.c  bwamem_extra.c  bwt.c  bwtindex.c  kthread.c
docs/: Doxyfile
htslib/: Makefile  Makefile.in  faidx.c  sam.c
htslib/test/: fieldarith  hfile  sam  test-regidx  test-vcf-api  test-vcf-sweep  test_view
json/: json-forwards.h  json.h
rtdocs/: BWAWrapper.rst  Makefile  conf.py  index.rst  installation.rst  introduction.rst  make.bat
seq_test/: Makefile.am  Makefile.in  config.status  configure  configure.ac  read_write.cpp  seq_test.cpp
snow_test/: Makefile.am  Makefile.in  config.status  configure  configure.ac  snow_test.cpp  snow_test_main.cpp  test_ref.fa  test_ref.fa.ann  test_ref.fa.bwt  test_ref.fa.sa
snow_test/test_data/: small.bam.bai  test_ref.fa.amb  test_ref.fa.pac
src/: AlignedContig.cpp  AlignedContig2.cpp  BFC.cpp  BLATWrapper.cpp  BWAAligner.cpp  BWAIndex.cpp  BWAWrapper.cpp  BamHeader.cpp  BamPolyReader.cpp  BamRead.cpp  BamReader.cpp  BamRecord.cpp  BamStats.cpp  BamWalker.cpp  BamWriter.cpp  BreakPoint.cpp  BreakPoint2.cpp  CoverageTool.cpp  CoverageTool.h  DBSnpFilter.cpp  DiscordantCluster.cpp  FastqReader.cpp  FermiAssembler.cpp  Fractions.cpp  GenomicRegion.cpp  GenomicRegionCollection.cpp  HTSTools.cpp  Histogram.cpp  Makefile  Makefile.am  Makefile.in  MiniRules.cpp  MiniRules2.cpp  PONFilter.cpp  Read.cpp  ReadFilter.cpp  RealignTool.cpp  RealignTool.h  RefGenome.cpp  STCoverage.cpp  (+25 more)
src/SeqKit/: BLATWrapper.h  BWAWrapper.h  BamHeader.h  BamReader.h  BamRecord.h  BamStats.h  BamWalker.h  BamWriter.h  FermiAssembler.h  Fractions.h  GenomicRegion.h  GenomicRegionCollection.h  Histogram.h  ReadFilter.h  RefGenome.h  STCoverage.h  SeqKitCommon.h  SeqKitUtils.h  SeqPlot.h
src/SeqLib/: BFC.h  BLATWrapper.h  BWAWrapper.h  BamHeader.h  BamPolyReader.h  BamReader.h  BamRecord.h  BamStats.h  BamWalker.h  BamWriter.h  FermiAssembler.h  GenomicRegion.h  GenomicRegionCollection.h  Histogram.h  ReadFilter.h  RefGenome.h  STCoverage.h  SeqLibCommon.h  SeqLibUtils.h  SeqPlot.h  UnalignedSequence.h
src/SnowTools/: AlignedContig.h  AlignedContig2.h  BLATWrapper.h  BWAWrapper.h  BamHeader.h  BamRead.h  BamReader.h  BamRecord.h  BamStats.h  BamWalker.h  BamWriter.h  BreakPoint.h  BreakPoint2.h  DBSnpFilter.h  DiscordantCluster.h  FermiAssembler.h  Fractions.h  GenomicRegion.h  GenomicRegionCollection.h  HTSTools.h  Histogram.h  IntervalTree.h  MiniRules.h  MiniRules2.h  Read.h  ReadFilter.h  RefGenome.h  STCoverage.h  SVVCF.h  SeqPlot.h  SnowTools.h  SnowToolsCommon.h  SnowUtils.h  gChain.h
src/bwa/: Makefile  bwamem.c  bwamem.h  fastmap.c
src/htslib/: Makefile  bgzf.pico  faidx.pico  hfile.pico  hfile_net.pico  hts.pico  kfunc.pico  knetfile.pico  kstring.pico  md5.pico  regidx.pico  sam.pico  synced_bcf_reader.pico  tbx.pico  vcf.pico  vcf_sweep.pico  vcfutils.pico  version.h
src/htslib/cram/: cram_codecs.pico  cram_decode.pico  cram_encode.pico  cram_index.pico  cram_io.pico  cram_samtools.pico  cram_stats.pico  files.pico  mFILE.pico  open_trace_file.pico  pooled_alloc.pico  rANS_static.pico  sam_header.pico  string_alloc.pico  thread_pool.pico  vlen.pico  zfio.pico
src/htslib/test/: fieldarith  hfile  sam  test-regidx  test-vcf-api  test-vcf-sweep  test_view
src/old/: AlignedContig.cpp  BreakPoint.cpp  BreakPoint.h  MiniRules.cpp  gChain.cpp
src/seqtools/: Makefile.in  seqtools.cpp
tests/: CMakeLists.txt  test_BamReader.cpp  test_BamRecord.cpp  test_GenomicRegionCollection.cpp
tests/data/: BCRABL.fa  sim.sorted.bam.bai  sim1_bcr.fq  sim2_bcr.fq  tiny.fa  tiny.fa.fai  wgsim.sh
tools/: Makefile.am  Makefile.in  snow  snowtools.cpp
(+29 files in other folders)
