noinst_LIBRARIES = libseqlib.a

libseqlib_a_CPPFLAGS = -I../ -I../htslib -I../blat/inc -I../blat/jkOwnLib -Wwrite-strings

libseqlib_a_SOURCES =   FastqReader.cpp BFC.cpp ReadFilter.cpp SeqPlot.cpp jsoncpp.cpp ssw_cpp.cpp ssw.c \
			GenomicRegion.cpp RefGenome.cpp BamWriter.cpp BamReader.cpp \
			BLATWrapper.cpp BWAWrapper.cpp BamRecord.cpp FermiAssembler.cpp BamHeader.cpp
