noinst_LIBRARIES = libalgorithm.a

libalgorithm_a_CPPFLAGS = \
	-I../Bigraph \
	-I../Util \
	-I../StringGraph \
	-I../SQG \
	-I../SuffixTools

libalgorithm_a_SOURCES = \
        OverlapAlgorithm.h OverlapAlgorithm.cpp \
		SearchSeed.h SearchSeed.cpp \
		OverlapBlock.h OverlapBlock.cpp \
		SearchHistory.h SearchHistory.cpp \
##        ErrorCorrectProcess.h ErrorCorrectProcess.cpp \
##        QCProcess.h QCProcess.cpp \
        OverlapTools.h OverlapTools.cpp 
##		DPAlignment.h DPAlignment.cpp \
##        ConnectProcess.h ConnectProcess.cpp \
##        StringGraphGenerator.h StringGraphGenerator.cpp \
##        FMMergeProcess.h FMMergeProcess.cpp \
##        StatsProcess.h StatsProcess.cpp \
##        ClusterProcess.h ClusterProcess.cpp \
##        ReadCluster.h ReadCluster.cpp \
##        LRAlignment.h LRAlignment.cpp \
##        StringThreader.h StringThreader.cpp \
##        ExtensionDP.h ExtensionDP.cpp \
##        HaplotypeBuilder.h HaplotypeBuilder.cpp \
##        GapFillProcess.h GapFillProcess.cpp \
##        VariationBuilderCommon.h VariationBuilderCommon.cpp \
##        KmerOverlaps.h KmerOverlaps.cpp
