noinst_LIBRARIES = libbigraph.a

libbigraph_a_CPPFLAGS = \
	-I../Util \
	-I../SQG

libbigraph_a_SOURCES = \
                       Bigraph.h Bigraph.cpp \
                       Vertex.h Vertex.cpp  \
                       Edge.h Edge.cpp \
                       EdgeDesc.h EdgeDesc.cpp \
                       GraphCommon.h
